syntax = "proto3";
package proto;
option go_package = ".";

message AuthData{string id = 1; string email = 2; string password = 3;}

service AuthService{
  rpc Register(RegisterReq) returns(RegisterRes){}
  rpc Login(LoginReq) returns(LoginRes){}
  rpc Validate(ValidateReq) returns(ValidateRes){}
  rpc DeleteData(DeleteDataReq) returns (DeleteDataRes){}
  rpc GetData(GetDataReq) returns (GetDataRes){}
}

//Register
message RegisterReq{string email = 1; string password = 2; bool dataPermission = 3;}
message RegisterRes{string status = 1;}

//Login
message LoginReq{string email = 1; string password = 2;}
message LoginRes{string status = 1; string token = 2;}

//Validate
message ValidateReq{string token = 1;  string userid = 2;}
message ValidateRes{string status = 1; string userid = 2;}

//DeleteData
message DeleteDataReq{string userId = 1;}
message DeleteDataRes{string status = 1;}

//GetData
message GetDataReq{string userId = 1;}
message GetDataRes{AuthData authData = 1;}